--- a/api-reference/mocking-api/mock-methods.mdx
+++ b/api-reference/mocking-api/mock-methods.mdx
@@ -1,267 +1,312 @@
 ---
-title: "Mocking Methods and Classes"
-description: "Explains how to declare and implement mock classes and methods using core GoogleMock macros, including support for C++ features like const correctness, overrides, and noexcept. Highlights best practices for mock class design."
+title: "Defining and Using Mock Methods"
+description: "Provides a reference for defining mock classes and methods via MOCK_METHOD macros, customizing signatures, and integrating with test fixtures. Clarifies advanced declaration patterns, qualifiers, and conventions for real-world use."
 ---
 
-# Mocking Methods and Classes
+# Defining and Using Mock Methods
 
-This document explains how to declare and implement mock classes and their methods using GoogleMock macros. It covers the usage of the core `MOCK_METHOD` macro, including how to handle C++ features such as const correctness, overrides, noexcept, calling conventions, and reference qualifiers. It also highlights best practices in mock class design, with examples demonstrating common scenarios.
-
----
-
-## Overview
-
-GoogleMock enables writing mock classes that simulate behavior of real classes for testing purposes. The cornerstone for mocking is the declaration of mock methods within mock classes using the `MOCK_METHOD` macro, which allows specification of the method signature and optional qualifiers matching the method being mocked.
-
-By accurately defining mock methods, you can set expectations on how these methods will be called, customize their behavior, and verify interactions during tests.
+This page provides a detailed reference on how to define mock classes and their methods using the `MOCK_METHOD` macro in GoogleMock. You will learn how to customize mock method signatures, handle advanced declaration patterns, and integrate mock methods effectively into your test fixtures. This documentation focuses exclusively on the mechanics and usage of `MOCK_METHOD` and related mock method declaration best practices.
 
 ---
 
-## Defining Mock Methods with `MOCK_METHOD`
+## Overview of MOCK_METHOD
 
-### Syntax
+To create a mock class capable of participating in unit testing with GoogleMock, you use the `MOCK_METHOD` macro. This macro generates mock implementations of virtual or non-virtual methods that can be controlled and verified during tests.
+
+### Basic Syntax
 
 ```cpp
-MOCK_METHOD(ReturnType, MethodName, (ArgTypes...), (Specs...));
+MOCK_METHOD(ReturnType, MethodName, (Args...), (Specifiers));
 ```
 
-- **ReturnType**: The return type of the mocked method.
+- **ReturnType**: The exact return type of the method being mocked.
 - **MethodName**: The name of the method to mock.
-- **ArgTypes...**: The types of the method’s parameters, enclosed in parentheses.
-- **Specs...** *(optional)*: A comma-separated list of qualifiers such as `const`, `override`, `noexcept`, `Calltype(...)`, and `ref(...)` to match the method's declaration.
+- **Args...**: The method's argument types enclosed in parentheses.
+- **Specifiers** (optional): A comma-separated list of qualifiers such as `const`, `override`, `noexcept`, or calling conventions.
 
-Example:
+### Example
 
-```cpp
-class MockFoo {
- public:
-  MOCK_METHOD(int, GetSize, (), (const, override));
-  MOCK_METHOD(void, Foo, (int x, double y), (noexcept, override));
-};
-```
-
-### Handling Commas in Types
-
-Some complex types such as templates with multiple arguments contain commas which confuse the macro parser. To fix this:
-
-- Wrap the entire type in an extra pair of parentheses, e.g.:
-  ```cpp
-  MOCK_METHOD((std::pair<bool, int>), GetPair, ());
-  MOCK_METHOD(bool, CheckMap, ((std::map<int, double>), bool));
-  ```
-
-- Or use type aliases:
-
-```cpp
-using BoolAndInt = std::pair<bool, int>;
-MOCK_METHOD(BoolAndInt, GetPair, ());
-```
-
-### Important Notes
-
-- Declare mock methods **public** in your mock class, even if the base class method is protected or private. This enables `ON_CALL` and `EXPECT_CALL` to work.
-- The mock method signature must match the original method, including qualifiers like `const` and `override`.
-
----
-
-## Qualifiers Supported by `MOCK_METHOD`
-
-The following qualifiers can be applied in the optional `Specs...` parameter:
-
-| Qualifier           | Description                                                         |
-|---------------------|---------------------------------------------------------------------|
-| `const`             | Marks the mock method as `const`. Required if mocking a `const` method. |
-| `override`          | Marks the method with `override`. Recommended if overriding a virtual method. |
-| `noexcept`          | Marks the method with `noexcept`. Required if overriding a `noexcept` method. |
-| `Calltype(...)`     | Specifies the calling convention, e.g., `Calltype(STDMETHODCALLTYPE)` on Windows. |
-| `ref(&)` or `ref(&&)` | Specifies reference qualifiers, required if overriding methods with reference qualifiers. |
-
-Example:
-
-```cpp
-MOCK_METHOD(bool, Process, (const Data& data), (const, override));
-MOCK_METHOD(void, Foo, (), (noexcept, override));
-MOCK_METHOD(int, Bar, (int), (Calltype(STDMETHODCALLTYPE)));
-``` 
-
----
-
-## Using `EXPECT_CALL` and `ON_CALL` with Mock Methods
-
-Once mock methods are declared, you use:
-
-- `EXPECT_CALL(mock_object, Method(arguments))` to set expected calls with behavior and cardinality.
-- `ON_CALL(mock_object, Method(arguments))` to set default behaviors without imposing call expectations.
-
-Example:
-
-```cpp
-MockFoo mock;
-ON_CALL(mock, GetSize()).WillByDefault(Return(42));
-EXPECT_CALL(mock, GetSize()).Times(2).WillRepeatedly(Return(17));
-
-int size = mock.GetSize();  // returns 17
-```
-
----
-
-## Best Practices for Mock Class Design
-
-- **Match original method signatures and qualifiers exactly** to ensure compatibility.
-- Declare all mock methods in the `public` section.
-- Avoid mocking non-virtual methods unless applying high-performance dependency injection techniques.
-- Wrap complex return and argument types with parentheses or use type aliases.
-- Use `override` and `noexcept` qualifiers where appropriate for clarity and correctness.
-- For overloaded methods, mock each overload explicitly, using `Const()` to disambiguate const overloads if needed.
-
----
-
-## Common Scenarios and Examples
-
-### Mocking a Simple Virtual Class
+Given an interface:
 
 ```cpp
 class Foo {
  public:
-  virtual ~Foo() {}
-  virtual int GetValue() const = 0;
-  virtual void SetValue(int value) = 0;
+  virtual ~Foo() = default;
+  virtual int GetSize() const = 0;
+  virtual string Describe(const char* name) = 0;
+  virtual bool Process(Bar elem, int count) = 0;
+};
+```
+
+You can define its mock as:
+
+```cpp
+class MockFoo : public Foo {
+ public:
+  MOCK_METHOD(int, GetSize, (), (const, override));
+  MOCK_METHOD(string, Describe, (const char* name), (override));
+  MOCK_METHOD(bool, Process, (Bar elem, int count), (override));
+};
+```
+
+## Important Notes on MOCK_METHOD Usage
+
+- **Must be in `public:` section:** Regardless of the access level of the original method, `MOCK_METHOD` calls should always be in the `public:` section of your mock class for accessibility by `ON_CALL` and `EXPECT_CALL`.
+- **Virtuality:** Usually, you mock *virtual* methods. It's possible to mock non-virtual methods with extra care (see the gMock Cookbook), but the standard use case is overriding virtual interfaces.
+- **Dealing with commas in types:** If your return type or argument types include commas (e.g. `std::pair<bool, int>` or `std::map<int, double>`), wrap the type in an extra set of parentheses or typedef/alias the type to avoid macro parsing errors.
+
+  ```cpp
+  // Will not compile:
+  MOCK_METHOD(std::pair<bool, int>, GetPair, ());
+  MOCK_METHOD(bool, CheckMap, (std::map<int, double>, bool));
+
+  // Correct approaches:
+  MOCK_METHOD((std::pair<bool, int>), GetPair, ());
+  MOCK_METHOD(bool, CheckMap, ((std::map<int, double>), bool));
+
+  // Or with type aliases:
+  using BoolIntPair = std::pair<bool, int>;
+  MOCK_METHOD(BoolIntPair, GetPair, ());
+  using MapIntDouble = std::map<int, double>;
+  MOCK_METHOD(bool, CheckMap, (MapIntDouble, bool));
+  ```
+
+- **Const and other qualifiers:** To mock a `const` method, specify the `(const)` qualifier in the fourth argument. Similarly, if the base method has `noexcept`, calling convention, or reference qualifiers, specify them here.
+
+## Handling Overloaded Methods
+
+When mocking overloaded methods, declare all overloads you want to mock explicitly. Example:
+
+```cpp
+class Foo {
+ public:
+  virtual Bar& GetBar();
+  virtual const Bar& GetBar() const;
+  virtual int Add(Element x);
+  virtual int Add(int times, Element x);
 };
 
 class MockFoo : public Foo {
  public:
-  MOCK_METHOD(int, GetValue, (), (const, override));
-  MOCK_METHOD(void, SetValue, (int value), (override));
+  MOCK_METHOD(Bar&, GetBar, (), (override));
+  MOCK_METHOD(const Bar&, GetBar, (), (const, override));
+  MOCK_METHOD(int, Add, (Element x), (override));
+  MOCK_METHOD(int, Add, (int times, Element x), (override));
 };
 ```
 
-### Mocking an Overloaded Method
+To avoid compiler warnings about hiding overloads you don't mock, `using` the base class methods can restore their visibility:
 
 ```cpp
-class Bar {
- public:
-  virtual ~Bar() {}
-  virtual int Calculate(int a) = 0;
-  virtual int Calculate(double a) = 0;
-};
-
-class MockBar : public Bar {
- public:
-  MOCK_METHOD(int, Calculate, (int a), (override));
-  MOCK_METHOD(int, Calculate, (double a), (override));
-};
-
-// Usage:
-MockBar mock;
-EXPECT_CALL(mock, Calculate(5));       // Calls int version
-EXPECT_CALL(mock, Calculate(3.14));    // Calls double version
+using Foo::Add;
 ```
 
-### Mocking Const Overloads
+## Mocking Class Templates
+
+Mock class templates can be mocked similarly, as long as their virtual methods are correctly declared:
 
 ```cpp
-class Baz {
+template <typename Elem>
+class StackInterface {
  public:
-  virtual int Foo() = 0;
-  virtual int Foo() const = 0;
+  virtual ~StackInterface();
+  virtual int GetSize() const = 0;
+  virtual void Push(const Elem& x) = 0;
 };
 
-class MockBaz : public Baz {
+template <typename Elem>
+class MockStack : public StackInterface<Elem> {
  public:
-  MOCK_METHOD(int, Foo, (), (override));
-  MOCK_METHOD(int, Foo, (), (const, override));
+  MOCK_METHOD(int, GetSize, (), (const, override));
+  MOCK_METHOD(void, Push, (const Elem& x), (override));
 };
-
-// Disambiguation of const calls
-const MockBaz const_mock;
-EXPECT_CALL(Const(mock), Foo()).WillOnce(Return(1));
-EXPECT_CALL(mock, Foo()).WillOnce(Return(2));
 ```
 
-### Overriding Methods with Reference Qualifiers
+## Mocking Non-Virtual Methods
+
+While gMock works best with virtual methods, you can mock non-virtual methods to support high-performance dependency injection. In this pattern, the mock class is unrelated to the original class but mimics its methods' signatures.
+
+Example:
 
 ```cpp
-class Qux {
+class ConcretePacketStream {
  public:
-  virtual int Get() & = 0;
-  virtual int Get() && = 0;
+  void AppendPacket(Packet* new_packet);
+  const Packet* GetPacket(size_t packet_number) const;
+  size_t NumberOfPackets() const;
 };
 
-class MockQux : public Qux {
+class MockPacketStream {
  public:
-  MOCK_METHOD(int, Get, (), (ref(&), override));
-  MOCK_METHOD(int, Get, (), (ref(&&), override));
+  MOCK_METHOD(const Packet*, GetPacket, (size_t packet_number), (const));
+  MOCK_METHOD(size_t, NumberOfPackets, (), (const));
 };
 ```
+
+Use template parameters to switch implementations in production vs test code.
+
+## Specifiers in MOCK_METHOD
+
+You can add optional qualifiers or specifiers to methods as a fourth argument, e.g.: 
+
+- `const` for const methods
+- `override` to indicate overriding a virtual method
+- `noexcept` if the original method is noexcept
+- `Calltype(...)` for calling conventions (Windows specific)
+- `ref(&)` or `ref(&&)` to mark reference qualifiers
+
+Example:
+
+```cpp
+MOCK_METHOD(bool, Foo, (int n), (Calltype(STDMETHODCALLTYPE)));
+MOCK_METHOD(int, Bar, (double x, double y), (const, Calltype(STDMETHODCALLTYPE)));
+```
+
+## Best Practices and Recommendations
+
+- **Mock only interfaces/classes you own:** To avoid fragile tests.
+- **Put all `MOCK_METHOD` macros in `public:`:** Regardless of original access level.
+- **Specify all pure virtual methods:** To avoid compilation errors.
+- **Use `override` qualifier:** Enforce correct overriding.
+- **Handle overloaded methods explicitly:** To avoid ambiguities and compiler errors.
+- **Wrap or alias complex types:** To avoid macro parsing issues with commas.
+
+## Example of a Complete Mock Class
+
+```cpp
+#include <gmock/gmock.h>
+
+class Turtle {
+ public:
+  virtual ~Turtle() {}
+  virtual void PenUp() = 0;
+  virtual void PenDown() = 0;
+  virtual void Forward(int distance) = 0;
+  virtual void Turn(int degrees) = 0;
+  virtual void GoTo(int x, int y) = 0;
+  virtual int GetX() const = 0;
+  virtual int GetY() const = 0;
+};
+
+class MockTurtle : public Turtle {
+ public:
+  MOCK_METHOD(void, PenUp, (), (override));
+  MOCK_METHOD(void, PenDown, (), (override));
+  MOCK_METHOD(void, Forward, (int distance), (override));
+  MOCK_METHOD(void, Turn, (int degrees), (override));
+  MOCK_METHOD(void, GoTo, (int x, int y), (override));
+  MOCK_METHOD(int, GetX, (), (const, override));
+  MOCK_METHOD(int, GetY, (), (const, override));
+};
+```
+
+## Summary
+
+- `MOCK_METHOD` automates mocking virtual and non-virtual methods.
+- You must precisely declare return type, method name, argument list, and optional qualifiers.
+- Advanced qualifiers enable support for const methods, noexcept, calling conventions, and reference qualifiers.
+- Overloads and templates require care to correctly mock and avoid compiler issues.
+
+## Additional Resources
+
+For details on using mock methods in tests, setting expectations, controlling call order, and managing mock strictness (Nice, Naggy, Strict), consult these pages:
+
+- [gMock for Dummies](gmock_for_dummies.md)
+- [Setting Expectations and Actions](guides/mocking-and-advanced-testing/setting-expectations-and-actions.mdx)
+- [Mocking Reference](reference/mocking.md#MOCK_METHOD)
+- [gMock Cookbook](docs/gmock_cook_book.md)
+- [Mock Behavior: Nice, Naggy, Strict Modes](api-reference/mocking-api/mock-behavior-controls)
 
 ---
 
-## Handling Move-only Types
+<Accordion title="Practical Tips">
 
-GoogleMock supports mocking methods accepting or returning move-only types (e.g., `std::unique_ptr<T>`). You can declare these mock methods as usual:
+- **Wrap complex types:** Use an alias or parentheses to handle commas.
+- **Keep mock methods public:** For visibility by test macros.
+- **Add override keyword:** Helps catch mistakes during compilation.
+- **Mock all base class pure virtual methods:** Ensures completeness.
+- **Use mock classes for interfaces you own:** Encourages decoupled, maintainable tests.
+- **Use `NiceMock` or `StrictMock` wrappers:** To control uninteresting call warnings.
 
-```cpp
-MOCK_METHOD(std::unique_ptr<Foo>, CreateFoo, (), (override));
-MOCK_METHOD(bool, ProcessFoo, (std::unique_ptr<Foo> foo), (override));
-```
+</Accordion>
 
-In tests, to return a move-only object repeatedly, use lambdas or functors:
+<Accordion title="Common Pitfalls">
 
-```cpp
-EXPECT_CALL(mock, CreateFoo())
-    .WillRepeatedly([]() { return std::make_unique<Foo>(); });
-```
+- Forgetting the virtual destructor in base interfaces leads to leaks and undefined behavior.
+- Not specifying `override` can cause silent mismatches with base methods.
+- Omitting parentheses around templated types containing commas causes compile errors.
+- Mocking methods without the correct qualifiers (`const`, `noexcept`) causes compilation errors or unexpected behavior.
+- Setting expectations on non-virtual methods without proper design leads to ineffective mocks.
 
-Avoid `Return(std::move(...))` with `WillRepeatedly`, as the value will be moved from only once.
+</Accordion>
+
+## Troubleshooting Tips
+
+- If you get mysterious macro expansion compile errors, verify parentheses around argument types.
+- For virtual destructor warnings/errors, ensure base interfaces declare virtual destructors.
+- Use `using` to bring base class overloads back into scope if some are hidden.
+- Compile with `-Werror` or `-Wall` to catch missing `override` or signature mismatches early.
+- If mocking non-virtual methods, use templates or adaptors cautiously as standard mocking macros expect virtuality.
 
 ---
 
-## Verifying and Cleaning Up Mocks
+## Integration with Test Fixtures
 
-GoogleMock automatically verifies expectations on mock objects when their destructors run. You can also explicitly verify and clear expectations and default actions at any point using:
+Mock methods defined with `MOCK_METHOD` can be seamlessly integrated into test fixtures (`TEST_F`) allowing rich control over mocked interactions. Use `EXPECT_CALL` and `ON_CALL` on mock objects instantiated in fixtures to establish behavior and expectations.
+
+Example:
 
 ```cpp
-bool success = ::testing::Mock::VerifyAndClearExpectations(&mock_object);
-bool successAndCleared = ::testing::Mock::VerifyAndClear(&mock_object);
+class TurtleTest : public ::testing::Test {
+ protected:
+  MockTurtle turtle;
+};
+
+TEST_F(TurtleTest, DrawLine) {
+  EXPECT_CALL(turtle, PenDown());
+  EXPECT_CALL(turtle, Forward(10));
+
+  Painter painter(&turtle);
+  EXPECT_TRUE(painter.DrawLine(10));
+}
 ```
 
-Use `Mock::AllowLeak(&mock_object);` to suppress verification and suppress leak errors when intentionally leaking mocks.
+This pattern keeps test code expressive, concise, and maintainable.
+
+---
+
+## Summary Diagram: Mock Method Definition Flow
+
+```mermaid
+sequenceDiagram
+    participant Dev as Developer
+    participant MockClass as Mock Class
+
+    Dev->>MockClass: Writes MOCK_METHOD in public section
+    Note right of MockClass: Macro expands to
+    Note right of MockClass: method override with
+    Note right of MockClass: internal mocking logic
+    MockClass-->>Dev: Provides mock method
+
+    Dev->>TestCode: Calls EXPECT_CALL or ON_CALL with mock method
+    TestCode->>MockClass: Sets expectations and actions
+    MockClass->>TestCode: Verifies calls and behaviors
+
+```
 
 ---
 
 ## Summary
 
-This documentation page provides comprehensive guidance on defining and implementing mock classes and methods using GoogleMock's core facilities. Detailed explanations include:
-
-- The syntax and usage of the `MOCK_METHOD` macro, including handling of C++ qualifiers and complex types.
-- How to set expectations with `EXPECT_CALL` and default behaviors with `ON_CALL`.
-- Best practices in mock class design and qualifiers use.
-- Working with overloaded methods, const and ref-qualified methods.
-- Support for move-only types in mocks.
-- Verification and cleanup of mocks.
-
-Users will find actionable examples and guidance for common usage scenarios, enabling robust test double creation and interaction verification.
-
----
-
-## Additional Resources
-
-- [GoogleMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html)
-- [Mocking Reference](../api-reference/mocking-api/mock-methods)
-- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html)
-- [Expectation Modifiers and Actions](../api-reference/mocking-api/expectations-actions)
-- [Advanced Mocking Techniques](../guides/advanced-usage-and-integration/advanced-mocking)
-- [Writing and Running Your First Test](../../getting-started/configuration-and-first-use/writing-first-test)
+This page explains how to define mock methods using `MOCK_METHOD` in GoogleMock, providing detailed guidelines on syntax, qualifiers, handling overloads and templates, and integrating mocks into tests. It underscores best practices, common pitfalls, and practical tips to help developers create robust and maintainable mock classes.
 
 ---
 
 ## See Also
 
-- [`EXPECT_CALL` Reference](../api-reference/mocking-api/expectations-actions)
-- [Matchers Guide](../api-reference/matchers-api/builtin-matchers)
-- [Using Mock Objects in Tests](../guides/core-test-workflows/mocking-intro)
-- [GoogleTest Core API](../api-reference/core-api/test-structure)
+- [gMock Cookbook](docs/gmock_cook_book.md)
+- [Mocking Reference: MOCK_METHOD](reference/mocking.md#MOCK_METHOD)
+- [Setting Expectations and Actions](guides/mocking-and-advanced-testing/setting-expectations-and-actions.mdx)
+- [Using Mocks in Unit Tests](guides/mocking-and-advanced-testing/using-mocks-in-unit-tests.mdx)
 
----
-
-_This documentation focuses strictly on mocking method and class declaration with GoogleMock macros, supporting user scenarios for designing and using mocks effectively._
+<Source url="https://github.com/google/googletest" paths={[{"path": "googlemock/include/gmock/gmock-spec-builders.h", "range": "1-378"}]} />
